Fix: prevent media item image from overflowing card

--- a/src/global.scss
+++ b/src/global.scss
@@ -87,4 +87,5 @@ ion-button {
   border-radius: 16px;
   background-color: white;
   box-shadow: 0px 4px 20px rgba(0, 62, 47, 0.25);
+  overflow: hidden;
 }
